<resources>
    <string name="app_name">Big Burger</string>

    <!--Fonts-->
    <string name="regular">regular</string>
    <string name="bold">bold</string>
    <string name="semibold">semibold</string>
    <string name="light">light</string>
    <string name="awesome">awesome</string>
    <string name="line_awesome">line_awesome</string>
    <string name="server_error_message">Oops alguma coisa deu errado! Verifique sua conexão com a internet.</string>
    <string name="server_error_icon"></string>
    <string name="action_cart">shopping_cart</string>
    <string name="transition_coupon">transition</string>
    <string name="add_ingredients">Adicionar Mais Ingredientes</string>
    <string name="add_to_cart">Confirmar pedido</string>
    <string name="update_ingredients">Adicionar ingredientes</string>
    <string name="ingredients_title">Ingredientes</string>
    <string name="orders_title">Pedidos</string>
</resources>
