<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/hecto_margin"
    android:orientation="vertical">

    <com.bigburger.customViews.BigBurgerTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/server_error_icon"
        android:textSize="130sp"
        app:typefaceOpenSans="@string/line_awesome"/>

    <com.bigburger.customViews.BigBurgerTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/brown"
        android:textSize="@dimen/deci_text"
        android:gravity="center"
        android:text="@string/server_error_message"/>

</LinearLayout>