<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="order"
            type="com.bigburger.viewmodel.ItemOrderViewModel"/>

    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clMainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/deci_margin"
        android:paddingRight="@dimen/deci_margin"
        android:transitionName="@string/transition_coupon">

        <ImageView
            android:id="@+id/mSandwichImage"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/centi_margin"
            android:layout_marginBottom="@dimen/kilo_margin"
            android:layout_marginTop="@dimen/kilo_margin"
            tools:sandwichUrl="@{order.image}"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/hecto_margin"
            android:paddingRight="@dimen/centi_margin"
            app:layout_constraintStart_toEndOf="@id/mSandwichImage"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">

            <com.bigburger.customViews.BigBurgerTextView
                android:id="@+id/name"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/deca_text"
                app:typefaceOpenSans="@string/semibold"
                android:textColor="@color/brown"
                android:text="@{order.name}" />

            <com.bigburger.customViews.BigBurgerTextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/deci_text"
                android:textColor="@color/red"
                app:typefaceOpenSans="@string/regular"
                android:paddingRight="@dimen/centi_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@{order.date}"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>