<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="com.bigburger.viewmodel.IngredientsViewModel"/>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        tools:context="com.bigburger.view.IngredientsActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/AppTheme.ToolBar"
            android:background="@color/orange">

            <com.bigburger.customViews.BigBurgerTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients_title"
                android:textSize="@dimen/deci_text"
                app:typefaceOpenSans="@string/semibold"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:id="@+id/toolbar_title" />

        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:context="com.bigburger.view.MainActivity">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mIngredientList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                app:layoutManager="LinearLayoutManager"
                app:visibility="@{viewModel.ingredientsListVisibility}"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"
                app:visibility="@{viewModel.loadingVisibility}"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:visibility="@{viewModel.noIngredientsFoundListVisibility}">

                <include
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/view_no_data_found" />

            </LinearLayout>

        </FrameLayout>

        <com.bigburger.customViews.BigBurgerButton
            android:id="@+id/mAddIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_rectangular_brown"
            android:layout_margin="@dimen/hecto_margin"
            android:textColor="@color/white"
            android:text="@string/update_ingredients" />

    </LinearLayout>

</layout>
